--- a/src/ConcurrencyAnalyzers.IntegrationTests/ConcurrencyAnalyzers.IntegrationTests.csproj
+++ b/src/ConcurrencyAnalyzers.IntegrationTests/ConcurrencyAnalyzers.IntegrationTests.csproj
@@ -10,10 +10,13 @@
 		<PackageReference Include="FluentAssertions" Version="6.2.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
 		<PackageReference Include="xunit" Version="2.4.1" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ConcurrencyAnalyzers.Tests\ConcurrencyAnalyzers.Tests.csproj" />
 		<ProjectReference Include="..\ConcurrencyAnalyzers\ConcurrencyAnalyzers.csproj" />
 	</ItemGroup>
 
