Add thread pool analyzer

--- a/src/ConcurrencyAnalyzers.Tests/ConcurrencyAnalyzers.Tests.csproj
+++ b/src/ConcurrencyAnalyzers.Tests/ConcurrencyAnalyzers.Tests.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\ConcurrencyAnalyzers\ConcurrencyAnalyzers.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Rendering\" />
+  </ItemGroup>
+
 </Project>
