--- a/src/ConcurrencyAnalyzers/ConcurrencyAnalyzers.csproj
+++ b/src/ConcurrencyAnalyzers/ConcurrencyAnalyzers.csproj
@@ -23,7 +23,13 @@
 	<ItemGroup>
 		<PackageReference Include="CommandLineParser" Version="2.8.0" />
 		<PackageReference Include="Microsoft.Diagnostics.Runtime" Version="2.0.226801" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
 		<PackageReference Include="RuntimeContracts" Version="0.3.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Tracing\" />
 	</ItemGroup>
 
 </Project>
