--- a/src/ConcurrencyAnalyzers/ConcurrencyAnalyzers.csproj
+++ b/src/ConcurrencyAnalyzers/ConcurrencyAnalyzers.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<DebugType>embedded</DebugType>
 		<Nullable>enable</Nullable>
@@ -11,6 +11,7 @@
 		<ServerGarbageCollection>true</ServerGarbageCollection>
 		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 		<AnalysisLevel>latest-all</AnalysisLevel>
+		<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -22,13 +23,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CommandLineParser" Version="2.8.0" />
-		<PackageReference Include="ErrorProne.NET.CoreAnalyzers" Version="0.4.0-beta.1">
+		<PackageReference Include="CommandLineParser" Version="2.9.1" />
+		<PackageReference Include="ErrorProne.NET.CoreAnalyzers" Version="0.7.0-beta.1">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Diagnostics.Runtime" Version="2.0.226801" />
-		<PackageReference Include="RuntimeContracts" Version="0.4.0" />
+		<PackageReference Include="Microsoft.Diagnostics.Runtime" Version="3.1.512801" />
+		<PackageReference Include="RuntimeContracts" Version="0.5.0" />
 		<PackageReference Include="RuntimeContracts.Analyzer" Version="0.4.3">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
